--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,6 +11,8 @@ Database:
 Settings:
   #If true, it will help debugging loading assets and such
   Tiny-Debug: false
+  #How long in ticks it will take for the pet to apply stats once spawned
+  Apply-Delay: 20
 Listeners:
   TinyListeners:
     AttributePets: true
