--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -13,14 +13,16 @@ Settings:
   Tiny-Debug: false
   #How long in ticks it will take for the pet to apply stats once spawned
   Apply-Delay: 20
+  #If true, pets won't have levels and storage will count unique pets.
+  Use-Simple-Storage: false
   Pet-Packing:
-    Distance: 0.125
-    Row-Size: 5
-    Default-Size: 3
+    Distance: 0.65
+    Row-Size: 3
+    Max-Pack-Size: 9
     Pivot:
-      Forward: -1.0
-      Up: 0.0
-      Right: -1.0
+      Forward: -0.25
+      Up: -1.0
+      Right: -2.25
 Listeners:
   TinyListeners:
     DisplayLevel: false
