Updates final name in pom.xml to include project version

--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
     </properties>
 
     <build>
+        <finalName>${project.name}-${project.version}</finalName>
         <plugins>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
